Fix the alignment of the wallet background

--- a/src/modules/pages/components/RouteLayouts/UserNavigation.css
+++ b/src/modules/pages/components/RouteLayouts/UserNavigation.css
@@ -115,6 +115,7 @@
   border: none;
   border-radius: var(--radius-normal);
   background-color: color-mod(var(--temp-grey-blue-7) alpha(10%));
+  line-height: 1;
   color: var(--temp-grey-blue-7);
   cursor: pointer;
 }
